--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -790,7 +790,7 @@ html {
 
 .about .section__subtitle {
     margin-top: 35px;
-    color: #666666;
+    color: #333333;
 }
 
 /* ===================================
@@ -1648,7 +1648,8 @@ html {
 }
 
 .footer__logo {
-    display: inline-flex;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     gap: var(--spacing-md);
     margin-bottom: var(--spacing-lg);
@@ -1668,8 +1669,8 @@ html {
     font-weight: var(--font-weight-bold);
     color: var(--color-white);
     margin: 0;
-    margin-top: 40px;
     letter-spacing: -0.5px;
+    text-align: center;
 }
 
 .footer__description {
@@ -2201,8 +2202,13 @@ html {
     }
     
     .footer__logo {
+        flex-direction: row;
         justify-content: flex-start;
         margin-bottom: var(--spacing-lg);
+    }
+    
+    .footer__logo-text {
+        text-align: left;
     }
     
     .footer__description {
